Fixes for the spacing around the accordions

--- a/services/ui-src/src/styles/_form.scss
+++ b/services/ui-src/src/styles/_form.scss
@@ -509,6 +509,10 @@ input[type=radio]+label {
   }
 }
 
+.section-footer {
+  margin-top: (variables.$margin * 2);
+}
+
 .review-view {
   h4 {
     color: variables.$black;
