--- a/services/ui-src/src/styles/_main.scss
+++ b/services/ui-src/src/styles/_main.scss
@@ -388,7 +388,11 @@ img {
 }
 
 .add-objective {
-  margin-top: (variables.$margin * 4);
+  margin-top: (variables.$margin * 2);
+}
+
+.delete-repeatable {
+  margin-top: (variables.$margin * 3);
 }
 
 .profile-information {
